some comments added

--- a/ContractFront/Pages/Login.razor
+++ b/ContractFront/Pages/Login.razor
@@ -18,7 +18,7 @@
     <label>Password:</label>
     <input type="password" @bind="Password" class="form-control" />
 </div>
-<button @onclick="HandleLogin" class="btn btn-primary">登录</button>
+<button @onclick="HandleLogin" class="btn btn-primary">Login</button>
 
 @code {
     private string Username { get; set; }
