--- a/ContractFront/Layout/MainLayout.razor
+++ b/ContractFront/Layout/MainLayout.razor
@@ -1,3 +1,13 @@
 ﻿@inherits LayoutComponentBase
 
-@Body
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+</head>
+
+<body>
+    <div class="container">
+        @Body
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
